<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/white"
        app:cardCornerRadius="14dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alert_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/check"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/alert_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/isPalindromeOrNot"
                    android:gravity="center"
                    android:layout_margin="10dp" />
                
                <View
                    android:id="@+id/alert_view"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/alert_message"
                    android:visibility="gone"
                    android:background="@color/white"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:layout_below="@id/alert_message"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_alert"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:textAllCaps="true"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>
        
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>